--- a/core/src/resources/fxml/newEquimentDialog.fxml
+++ b/core/src/resources/fxml/newEquimentDialog.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.unice.dreamteam.UI.Dialogs.NewEquipmentDialog">
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox prefHeight="56.0" prefWidth="600.0">
+            <HBox prefHeight="28.0" prefWidth="600.0">
                <children>
-                  <ImageView fitHeight="56.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fx:id="equipmentImage" fitHeight="44.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
                         <Insets left="10.0" />
                      </HBox.margin>
@@ -23,12 +22,12 @@
                         <Font size="16.0" />
                      </font>
                      <HBox.margin>
-                        <Insets top="15.0" />
+                        <Insets top="10.0" />
                      </HBox.margin>
                   </Label>
                </children>
             </HBox>
-            <GridPane prefHeight="44.0" prefWidth="600.0">
+            <GridPane prefHeight="34.0" prefWidth="600.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -42,20 +41,39 @@
                         <Insets left="15.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField promptText="Ex: Router 01" GridPane.columnIndex="1" />
+                  <TextField fx:id="configEquipmentName" promptText="Ex: Router 01" GridPane.columnIndex="1" />
                </children>
             </GridPane>
-            <TableView editable="true" prefHeight="272.0" prefWidth="600.0">
-              <columns>
-                <TableColumn editable="false" prefWidth="75.0" text="Interface" />
-                <TableColumn prefWidth="75.0" text="Type" />
-                  <TableColumn prefWidth="75.0" text="Ip Address" />
-                  <TableColumn prefWidth="75.0" text="Mask" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
+            <TabPane prefHeight="294.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab text="Interfaces">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <TableView fx:id="interfaceTable" editable="true" prefHeight="272.0" prefWidth="600.0">
+                                <columns>
+                                  <TableColumn fx:id="interfaceC" editable="false" prefWidth="75.0" text="Interface" />
+                                  <TableColumn fx:id="typeC" editable="false" prefWidth="75.0" text="Type" />
+                                    <TableColumn fx:id="ipC" editable="false" prefWidth="75.0" text="Ip Address" />
+                                    <TableColumn fx:id="maskC" editable="false" prefWidth="75.0" text="Mask" />
+                                </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                              <Button fx:id="addInterface" alignment="CENTER" mnemonicParsing="false" onAction="#addInterface" text="+" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0" />
+                              <Button fx:id="delInterface" alignment="CENTER" disable="true" layoutX="575.0" layoutY="240.0" mnemonicParsing="false" onAction="#delInterface" text="-" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="40.0" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+                <Tab text="Untitled Tab 2">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
             <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity">
                <children>
                   <HBox fx:id="actionParent" alignment="CENTER">
@@ -64,14 +82,14 @@
                      </HBox.margin>
                   </HBox>
                   <Pane maxWidth="+Infinity" HBox.hgrow="ALWAYS" />
-                  <Button fx:id="cancelButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" text="Cancel" HBox.hgrow="NEVER">
+                  <Button fx:id="cancelButton" cancelButton="true" minWidth="80.0" mnemonicParsing="false" onAction="#cancelDialog" text="Cancel" HBox.hgrow="NEVER">
                      <HBox.margin>
                         <Insets />
                      </HBox.margin>
                   </Button>
                   <HBox fx:id="okParent" alignment="CENTER">
                      <children>
-                        <Button fx:id="okButton" minWidth="80.0" mnemonicParsing="false" text="Ok" HBox.hgrow="NEVER">
+                        <Button fx:id="okButton" minWidth="80.0" mnemonicParsing="false" onAction="#validateDialog" text="Add" HBox.hgrow="NEVER">
                            <HBox.margin>
                               <Insets left="14.0" />
                            </HBox.margin>
