--- a/core/src/resources/fxml/newEquimentDialog.fxml
+++ b/core/src/resources/fxml/newEquimentDialog.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.unice.dreamteam.UI.Dialogs.NewEquipmentDialog">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -13,7 +13,7 @@
                <children>
                   <ImageView fx:id="equipmentImage" fitHeight="44.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                      <HBox.margin>
-                        <Insets left="10.0" />
+                        <Insets left="10.0" top="5.0" />
                      </HBox.margin>
                   </ImageView>
                   <Pane prefHeight="56.0" prefWidth="130.0" />
@@ -56,6 +56,7 @@
                                   <TableColumn fx:id="typeC" editable="false" prefWidth="75.0" text="Type" />
                                     <TableColumn fx:id="ipC" editable="false" prefWidth="75.0" text="Ip Address" />
                                     <TableColumn fx:id="maskC" editable="false" prefWidth="75.0" text="Mask" />
+                                    <TableColumn editable="false" prefWidth="75.0" text="Passive Interface" />
                                 </columns>
                                  <columnResizePolicy>
                                     <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
