--- a/core/src/resources/fxml/newInterfaceDialog.fxml
+++ b/core/src/resources/fxml/newInterfaceDialog.fxml
@@ -3,7 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="270.0" prefWidth="266.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iut.unice.dreamteam.UI.Dialogs.NewInterfaceDialog">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="276.0" prefWidth="266.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox prefHeight="366.0" prefWidth="246.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -18,7 +18,7 @@
                <children>
                   <Label />
                   <CheckBox fx:id="repeat" mnemonicParsing="false" text="Repeat ?" />
-                  <TextField fx:id="numberRepeat" promptText="1 time" GridPane.columnIndex="1" />
+                  <TextField fx:id="numberRepeat" promptText="1" text="1" GridPane.columnIndex="1" />
                </children>
                <VBox.margin>
                   <Insets top="10.0" />
@@ -34,6 +34,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Automatic name" GridPane.hgrow="ALWAYS" />
@@ -44,6 +45,8 @@
                   <TextField fx:id="ip" promptText="192.168.0.3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="mask" promptText="255.255.255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <ChoiceBox fx:id="types" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Label text="Passive interface" GridPane.rowIndex="4" />
+                  <CheckBox fx:id="passiveInt" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
                </children>
             </GridPane>
             <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity">
