--- a/core/src/resources/fxml/equimentDialog.fxml
+++ b/core/src/resources/fxml/equimentDialog.fxml
@@ -17,7 +17,7 @@
                      </HBox.margin>
                   </ImageView>
                   <Pane prefHeight="56.0" prefWidth="130.0" />
-                  <Label text="Configure before adding" textAlignment="CENTER">
+                  <Label text="Configure your equipment" textAlignment="CENTER">
                      <font>
                         <Font size="16.0" />
                      </font>
