--- a/core/src/resources/fxml/newInterfaceDialog.fxml
+++ b/core/src/resources/fxml/newInterfaceDialog.fxml
@@ -33,20 +33,23 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Automatic name" GridPane.hgrow="ALWAYS" />
                   <Label text="Mask" GridPane.rowIndex="2" />
-                  <Label text="Interface type" GridPane.rowIndex="3" />
+                  <Label text="Interface type" GridPane.rowIndex="4" />
                   <Label text="IP address" GridPane.rowIndex="1" />
                   <TextField fx:id="name" disable="true" editable="false" GridPane.columnIndex="1" />
                   <TextField fx:id="ip" promptText="192.168.0.3" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="mask" promptText="255.255.255.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <ChoiceBox fx:id="types" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <Label text="Passive interface" GridPane.rowIndex="4" />
-                  <CheckBox fx:id="passiveInt" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+                  <ChoiceBox fx:id="types" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="Passive interface" GridPane.rowIndex="5" />
+                  <CheckBox fx:id="passiveInt" mnemonicParsing="false" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+                  <Label text="Gateway" GridPane.rowIndex="3" />
+                  <TextField fx:id="gateway" promptText="192.168.0.254" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                </children>
             </GridPane>
             <HBox maxHeight="-Infinity" maxWidth="+Infinity" minHeight="-Infinity" minWidth="-Infinity">
